Implementaion of Phase 4 - Intelligence: completed.
